--- a/css/main.css
+++ b/css/main.css
@@ -268,6 +268,10 @@
 		margin-top: 90px;
 	}
 
+	.mobile-avatar {
+		display: none;
+	}
+
 /* ABOUT ME PAGE */
 
 	.about-hero {
@@ -708,6 +712,11 @@
 		.cc-sketches, .cc-wireframe-img1, .cc-wireframe-img2, .two-img-a, 
 			.two-img-b, .test-img1, .test-img2, .test-img3 {
 			display: none;
+		}
+
+		.mobile-avatar {
+			display: block;
+			margin-left: 75px;
 		}
 
 	}
