--- a/css/main.css
+++ b/css/main.css
@@ -445,8 +445,9 @@
 		padding-bottom: 10px;
 	}
 	.wireframe-hr {
-		font-size: 21px;
+		font-size: 18px;
 		margin-top: 0;
+		text-transform: uppercase;
 	}
 
 /* COMICCRUSADE PAGE */
@@ -492,7 +493,11 @@
 		grid-column-start: 4;
 	}
 
-	.stories, .flows, .cc-sketches, .test-img1 {
+	.stories {
+		grid-column-start: 1;
+	}
+
+	.flows, .cc-sketches, .test-img1 {
 		grid-column-start: 2;
 	}
 
@@ -565,7 +570,7 @@
 	}
 
 	.stories {
-		grid-column-end: span 12;
+		grid-column-end: span 16;
 	}
 
 	.ur-point-3, .ur-point-4 {
@@ -1078,10 +1083,6 @@
 		.connect {
 			grid-template-columns: 350px auto 350px;
 		}
-
-		.cs-hero-container {
-			width: 80%;
-		}
 	}
 
 	@media screen and (min-width: 1242px) {
@@ -1107,7 +1108,6 @@
 	@media screen and (min-width: 1400px) {
 		.cs-hero-container {
 			margin-top: 270px;
-			width: 65%;
 		}
 
 		.cc-case, .fs-case {
