--- a/css/main.css
+++ b/css/main.css
@@ -224,14 +224,14 @@
 	}
 
 	.avatar {
-		grid-column-start: 6;
+		grid-column-start: 11;
 		grid-column-end: span 3;
 		margin-top: 230px;
 		margin-bottom: 60px;
-		margin-left: 86px;
+		/* margin-left: 86px; */
 		height: auto;
 		display: block;
-		width: 70%;
+		/* width: 70%; */
 	}
 
 	.case-studies {
@@ -239,48 +239,43 @@
 		margin-top: 32px;
 	}
 
+	.case-study-hr {
+		border-top: none;
+
+	}
+
 	.cc-app {
-		grid-column-start: 2;
-		grid-column-end: span 3;
+		grid-column-start: 3;
+		grid-column-end: span 6;
 		margin-top: 72px;
 	}
 
-	.fs-case, .fs-app {
-		margin-top: 48px;
-		margin-bottom: 48px;
-	}
-
 	.cc-case, .fs-case {
-		width: 85%;
+
 	}
 
 	.cc-case {
-		grid-column-start: 5;
-		grid-column-end: span 3;  
+		grid-column-start: 10;
+		grid-column-end: span 5;
 	}
 
 	.fs-app {
-		grid-column-start: 5;
-		grid-column-end: span 3;
+		grid-column-start: 9;
+		grid-column-end: span 6;
 		margin-top: 69px;
+		margin-bottom: 48px;
 	}
 
 	.cc-app, .fs-app {
-		width: 100%;
+		width: 374px;
+		height: 372px;
 		display: block;
 	}
 
-	.cc-case, .fs-app {
-		margin-left: 40px;
-	}
-
 	.fs-case {
-		grid-column-start: 2;
-		grid-column-end: span 3;
-	}
-
-	.cc-case, .fs-case {
-		margin-top: 90px;
+		grid-column-start: 3;
+		grid-column-end: span 5;
+		margin-top: 36px;
 	}
 
 	.mobile-avatar {
@@ -504,7 +499,7 @@
 
 	.cs-hero-container {
 		grid-column-start: 3;
-		grid-column-end: 8;
+		grid-column-end: 9;
 		margin-top: 170px;
 		margin-bottom: 32px;
 		padding-bottom: 32px;
@@ -704,64 +699,23 @@
 		}
 	}
 
-	@media screen and (max-width: 425px) {
-		h1 {
-			font-size: 32px;
-			line-height: 55px;
-		}
-
-		h2 {
-			font-size: 24px;
-		}
-
-		h3 {
-			font-size: 22px;
-		}
-
-		p {
-			font-size: 16px;
-		}
-
-		figcaption {
-			margin-bottom: 10px;
-		}
-
-		.cs-hero-container {
-			text-align: center;
-			grid-column-end: 15;
-		}
-
-		.cc-hero-1, .cc-hero-2 {
-			display: none;
-		}
-
-		.logo-hr, .cc-hero-img, .fs-hero-img, .flows {
-			display: none;
-		}
-
-		/*.cc-mobile-hero {
-			display: block;
-		}*/
-
-		.cc-sketches, .cc-wireframe-img1, .cc-wireframe-img2, .two-img-a, 
-			.two-img-b, .test-img1, .test-img2, .test-img3 {
-			display: none;
-		}
-
-		.mobile-avatar {
-			display: block;
-			margin-left: 75px;
-		}
-
-	}
-
 	@media screen and (max-width: 556px) {
 		.about-hero-hr {
 			margin-top: 0;
 		}
 
+		.mobile-avatar {
+			display: block;
+		}
+
+
 		.avatar {
 			display: none;
+		}
+
+		.cs-hero-container {
+			text-align: center;
+			grid-column-end: 16;
 		}
 
 		.my-footer {
@@ -778,49 +732,6 @@
 		}
 	}
 
-	@media screen and (max-width: 660px) {
-		
-		/* Make hamburger menu appear at this screen width or lower*/
-		.menu-toggle {
-			display: block;
-		}
-
-		.links {
-			list-style: none;
-			margin-top: 110px;
-		}
-
-		.closebtn {
-			position: relative;
-			margin-top: 81px;
-		}
-
-		.nav-links {
-			display: none;
-		}
-
-		.fs-ur-1, .fs-ur-2, .fs-ur-3 {
-			width: 90%;
-		}
-
-		.fs-ur-1 {
-			grid-column-start: 3;
-			grid-column-end: span 4;
-			margin-left: 5%;
-		}
-
-		.fs-ur-2 {
-			grid-column-start: 1;
-			grid-column-end: span 4;
-			margin-left: 9%;
-		}
-
-		.fs-ur-3 {
-			grid-column-start: 6;
-			grid-column-end: span 3;
-		}
-
-	}
 
 	@media screen and (max-width: 668px) {
 		.cs-swot {
@@ -879,11 +790,72 @@
 
 		/* MAIN PAGE */
 
-		.avatar {
-			grid-column-start: 5;
-			grid-column-end: span 4;
+		.cc-app, .fs-case {
+			grid-column-start: 2;
+		}
+
+		.cc-case, .fs-case {
+			grid-column-end: span 6;
 		}
 	}
+
+	@media screen and (max-width: 660px) {
+		
+		/* Make hamburger menu appear at this screen width or lower*/
+		.menu-toggle {
+			display: block;
+		}
+
+		.links {
+			list-style: none;
+			margin-top: 110px;
+		}
+
+		.closebtn {
+			position: relative;
+			margin-top: 81px;
+		}
+
+		.nav-links {
+			display: none;
+		}
+
+		/*HOME PAGE*/
+		.cs-hero-container, .cc-case, .fs-app {
+			grid-column-start: 2;
+		}
+
+		.case-study-hr {
+			margin-top: 10px;
+		}
+
+		.cc-case, .fs-case {
+			grid-column-end: span 10;
+		}
+
+		/*.fs-ur-1, .fs-ur-2, .fs-ur-3 {
+			width: 90%;
+		}
+
+		.fs-ur-1 {
+			grid-column-start: 3;
+			grid-column-end: span 4;
+			margin-left: 5%;
+		}
+
+		.fs-ur-2 {
+			grid-column-start: 1;
+			grid-column-end: span 4;
+			margin-left: 9%;
+		}
+
+		.fs-ur-3 {
+			grid-column-start: 6;
+			grid-column-end: span 3;
+		}*/
+
+	}
+
 
 	@media screen and (max-width: 868px) {
 		/* COMICCRUSADE PAGE */
@@ -899,8 +871,75 @@
 			grid-column-end: span 3;
 			width: 83%;
 		}
+
+		.cc-app, .fs-app {
+			width: 314px;
+			height: 312px;
+		}
+
+		.fs-case {
+			margin-top: 0;
+		}
+
+		/*.cc-case, .fs-app {
+			grid-column-start: 3;
+		}*/
 	}
 
+	@media screen and (max-width: 353px) {
+
+		.cc-app, .fs-app {
+			width: 280px;
+			height: 278px;
+		}
+
+	}
+
+	@media screen and (max-width: 425px) {
+		h1 {
+			font-size: 32px;
+			line-height: 55px;
+		}
+
+		h2 {
+			font-size: 24px;
+		}
+
+		h3 {
+			font-size: 22px;
+		}
+
+		p {
+			font-size: 16px;
+		}
+
+		figcaption {
+			margin-bottom: 10px;
+		}
+
+		.cc-hero-1, .cc-hero-2 {
+			display: none;
+		}
+
+		.logo-hr, .cc-hero-img, .fs-hero-img, .flows {
+			display: none;
+		}
+
+		.cc-case, .fs-case {
+			grid-column-end: span 14;
+		}
+
+		/*.cc-mobile-hero {
+			display: block;
+		}*/
+
+		.cc-sketches, .cc-wireframe-img1, .cc-wireframe-img2, .two-img-a, 
+			.two-img-b, .test-img1, .test-img2, .test-img3 {
+			display: none;
+		}
+	}
+
+/*
 	@media screen and (min-width: 320px) {
 		.main-content, .connect {
 			grid-template-columns: 20px auto 20px;
@@ -1106,3 +1145,4 @@
 			margin-top: 180px;
 		}
 	}
+*/
