Modifided text color

--- a/css/main.css
+++ b/css/main.css
@@ -247,11 +247,12 @@
 	.intro-hr {
 		font-size: 110px;
 		margin-bottom: 10px;
+		color: #fff;
 	}
 
 	.intro-p {
-
-	}
+color: #fff;
+}
 
 	.intro-btn {
 
